Bug 444898 - Logout greeter no longer animated
Summary: Logout greeter no longer animated
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.23.2
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-11-03 18:09 UTC by Kai Uwe Broulik
Modified: 2021-12-17 19:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2021-11-03 18:09:34 UTC
SUMMARY
The logout greeter window no longer animates in

STEPS TO REPRODUCE
1. Select "Leave" in Kickoff or wherever

OBSERVED RESULT
Logout window appears instantly

EXPECTED RESULT
Logout window is animated in

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2021-11-01 on X11
ADDITIONAL INFORMATION
Comment 1 Kai Uwe Broulik 2021-11-03 18:10:03 UTC
This broke with https://invent.kde.org/plasma/kwin/-/merge_requests/1452
Comment 2 Nate Graham 2021-11-03 18:10:46 UTC
Can confirm.
Comment 3 Bug Janitor Service 2021-11-25 11:06:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1218
Comment 4 David Edmundson 2021-11-25 11:23:34 UTC
Git commit a7fa01015c99b2fa9e7e15280e7d289766b7932f by David Edmundson.
Committed on 25/11/2021 at 11:22.
Pushed by davidedmundson into branch 'master'.

[logout-greeter] Set window class name

This matches what kwin's effects have always been searching for. It only
used to appear to work as "ksmserver ksmserver" was checked in previous
versions.
Related: bug 444899

M  +2    -2    logout-greeter/shutdowndlg.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/a7fa01015c99b2fa9e7e15280e7d289766b7932f
Comment 5 Nate Graham 2021-11-27 05:28:24 UTC
Git commit 22bd1fb8cbb23e7aeb0237f1389ef35b0553a040 by Nate Graham, on behalf of David Edmundson.
Committed on 27/11/2021 at 05:27.
Pushed by ngraham into branch 'Plasma/5.23'.

[logout-greeter] Set window class name

This matches what kwin's effects have always been searching for. It only
used to appear to work as "ksmserver ksmserver" was checked in previous
versions.
Related: bug 444899
(cherry picked from commit a7fa01015c99b2fa9e7e15280e7d289766b7932f)

M  +2    -2    logout-greeter/shutdowndlg.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/22bd1fb8cbb23e7aeb0237f1389ef35b0553a040
Comment 6 Nate Graham 2021-12-16 19:17:10 UTC
*** Bug 447083 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2021-12-17 15:19:12 UTC
*** Bug 447083 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2021-12-17 15:20:13 UTC
Duplicate report Bug 447083 says that this is still not working in 5.23.4. :(
Comment 9 David Edmundson 2021-12-17 15:37:16 UTC
That's not a duplicate. It's not about the logout greeter.
Comment 10 folderkillered 2021-12-17 19:18:52 UTC
(In reply to David Edmundson from comment #9)
> That's not a duplicate. It's not about the logout greeter.

Yes!