[logout-greeter] Set window class name

This matches what kwin's effects have always been searching for. It only
used to appear to work as "ksmserver ksmserver" was checked in previous
versions.

BUG: 444898
BUG: 444899